Fix due to checkstyle and spotbugs